--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,58 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css");
+/* @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"); */
 @import url("https://dazzle-ui-components.netlify.app/components/components.css");
 
 :root {
     --primary: #1a1c20;
-    --secondary: #cf7500;
-    --tertiary: #f0a500;
-    --gray: #f4f4f4;
+    --primary-hover:#2a2c30;
+    --secondary: #f0a500;
+    --tertiary: #cf7500;
+}
+
+.tertiary-text {
+    color: var(--tertiary);
+}
+
+.section-intro {
+    justify-content: space-around;
+}
+
+
+.home-img {
+    max-height: 35rem;
+    width: 70%;
+}
+
+.card-vertical {
+    width: 17.5rem;
+}
+
+.card-img-vertical {
+    height: 15rem;
+}
+
+.card-vertical > .card-details{
+    height: 6rem;
+}
+
+.explore-btn {
+    padding: 1rem 1.5rem;
+}
+
+.button-anchor {
+    background: var(--primary);
+    color: var(--secondary);
+    width: 100%;
+}
+
+.explore-btn:hover, .button-anchor:hover{
+    background: var(--primary-hover);
+}
+
+footer {
+    background-color: var(--light-gray);
+}
+
+.footer-icon {
+    color: var(--primary);
 }
