--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css");
-/* @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"); */
 @import url("https://dazzle-ui-components.netlify.app/components/components.css");
+
+
+@import "/css/authentication.css";
 
 :root {
     --primary: #1a1c20;
-    --primary-hover:#2a2c30;
+    --primary-hover: #2a2c30;
     --secondary: #f0a500;
     --tertiary: #cf7500;
 }
@@ -15,6 +17,7 @@
 
 .section-intro {
     justify-content: space-around;
+    padding-bottom: 4.5rem;
 }
 
 
@@ -31,7 +34,7 @@
     height: 15rem;
 }
 
-.card-vertical > .card-details{
+.card-vertical>.card-details {
     height: 6rem;
 }
 
@@ -43,9 +46,12 @@
     background: var(--primary);
     color: var(--secondary);
     width: 100%;
+    border-radius: 0 0 4px 4px;
+    padding: 0.8rem;
 }
 
-.explore-btn:hover, .button-anchor:hover{
+.explore-btn:hover,
+.button-anchor:hover {
     background: var(--primary-hover);
 }
 
@@ -55,4 +61,23 @@ footer {
 
 .footer-icon {
     color: var(--primary);
+}
+
+.text-uppercase {
+    text-transform: uppercase;
+}
+
+@media screen and (max-width:720px) {
+    .section-intro {
+        flex-wrap: wrap-reverse;
+    }
+
+    .section-text {
+        padding: 2rem;
+        text-align: center;
+    }
+
+    .home-img {
+        width: 100%;
+    }
 }
